--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,25 @@ worker_processes 4;
 
 events { worker_connections 1024; }
 
-http {
+http{
 
-        server {
-              listen 80;
-         
-              location / {
+
+       server {
+    		listen 80;
+	        server_name *.klaxon.com;
+                location / {
+                proxy_pass http://localhost:4040;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+               }	 
+       }
+       server {
+	       listen 80;
+               server_name staging.klaxon.com;
+               location / {
                 proxy_pass http://localhost:4040;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
@@ -15,5 +28,6 @@ http {
                 proxy_set_header Host $host;
                 proxy_cache_bypass $http_upgrade;
               }
-        }
+
+	}
 }
