--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ http{
 
        server {
     		listen 80;
-	        server_name *.klaxon.com;
+	        server_name *.klaxonstudio.com;
                 location / {
                 proxy_pass http://localhost:4040;
                 proxy_http_version 1.1;
@@ -19,7 +19,7 @@ http{
        }
        server {
 	       listen 80;
-               server_name staging.klaxon.com;
+               server_name staging.klaxonstudio.com;
                location / {
                 proxy_pass http://localhost:4040;
                 proxy_http_version 1.1;
