--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ http{
 
        server {
     		listen 80;
-	        server_name *.klaxonstudio.com;
+	        server_name www.klaxonstudio.com  klaxonstudio.com;
                 location / {
                 proxy_pass http://localhost:4040;
                 proxy_http_version 1.1;
@@ -21,7 +21,7 @@ http{
 	       listen 80;
                server_name staging.klaxonstudio.com;
                location / {
-                proxy_pass http://localhost:4040;
+                proxy_pass http://localhost:4041;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
