--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ worker_processes 4;
 events { worker_connections 1024; }
 
 http{
-
+client_max_body_size 4M;
 
        server {
     		listen 80;
@@ -17,6 +17,7 @@ http{
                 proxy_cache_bypass $http_upgrade;
                }	 
        }
+         
        server {
 	       listen 80;
                server_name staging.klaxonstudio.com;
