--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,13 @@ services:
     ports:
       - "80:80"
     network_mode: "host"
-  db-postgres:
-    network_mode: "host"
-    image: bitnami/postgresql:latest
-    environment:
-      - POSTGRESQL_PASSWORD=12345
-      - POSTGRESQL_DATABASE=KS
-    volumes:
-      - /var/postgres_bitnami:/bitnami/postgresql
-  db-mysql:
-    image: mysql
-    network_mode: "host"
-    environment:
-      - MYSQL_ROOT_PASSWORD=12345
+  db:
+     image: mysql
+     command: mysqld --sql_mode="" --character-set-server=utf8 --collation-server=utf8_unicode_ci --init-connect='SET NAMES UTF8;'
+     network_mode: "host"
+     container_name: "mysql"
+     environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=true
   web:
     build: dotnet/.
     network_mode: "host"
